# GPS-Distance-Tracking-System

./: README.md  Teams Members Data.txt  TeamsData.txt  Test.txt  names.txt
.jxbrowser.userdata/: Last Browser  Local State  Module Info Cache
.jxbrowser.userdata/Default/: History  Preferences  Secure Preferences  Top Sites  Visited Links  Web Data
.jxbrowser.userdata/GrShaderCache/: data_0  data_1  f_000001  f_000002  index
.jxbrowser.userdata/Local Storage - EXT/: http_127.0.0.1.localstorage
.jxbrowser.userdata/ShaderCache/: data_1  index
COTS/: CMakeLists.txt
COTS/01- MCAL/: Receive_String.c
COTS/01- MCAL/01- DIO/: DIO_interface.h  DIO_private.h  DIO_program.c
COTS/01- MCAL/02- STK/: STK_config.h  STK_interface.h  STK_private.h  STK_program.c
COTS/01- MCAL/03- STK/: STK_config.h  STK_interface.h  STK_private.h  STK_program.c
COTS/01- MCAL/03- UART/: UART.h  UART_INIT.c  UART_interface.h  UART_program.c  UART_recieveByte  UART_sendByte.c  UART_sendStrin  UART_sendString  UART_sendString.c  recieveByte  sendByte.c
COTS/01- MCAL/DIO_Test/: DIO_Test.uvguix.karim  DIO_private.h  Test.c
COTS/01- MCAL/DIO_Test/Objects/: DIO_Test.axf  DIO_Test.build_log.htm  DIO_Test.htm  DIO_Test.lnp  DIO_Test_Target 1.dep
COTS/01- MCAL/DIO_Test/RTE/_Target_1/: RTE_Components.h
COTS/01- MCAL/DIO_Test/html/: _d_i_o__interface_8h_source.html  _s_t_d___t_y_p_e_s_8h_source.html  _t_m4_c123_g_h6_p_m_8h_source.html  files.html
COTS/01- MCAL/DIO_Test/latex/: _d_i_o__interface_8h_source.tex  _d_i_o__private_8h_source.tex  _s_t_d___t_y_p_e_s_8h_source.tex  refman.tex
COTS/01- MCAL/STK_Test/: DIO_config.h  DIO_interface.h  STK_Test.uvguix.karim  STK_Test.uvoptx  STK_Test.uvprojx  STK_config.h  STK_interface.h  STK_private.h  STK_program.c  main.c
COTS/01- MCAL/STK_Test/Listings/: STK_Test.map
COTS/01- MCAL/STK_Test/Objects/: STK_Test.axf  STK_Test.build_log.htm  STK_Test.htm  STK_Test.lnp  STK_Test_Target 1.dep  dio_program.d  main.d  stk_program.d
COTS/01-MCAL/: 02-STK.rar
COTS/01-MCAL/01-DIO/: CMakeLists.txt  DIO_config.h  DIO_interface.h  DIO_private.h  DIO_program.c
COTS/01-MCAL/02-STK/: CMakeLists.txt  STK_config.h  STK_interface.h  STK_private.h  STK_program.c
COTS/01-MCAL/03-UART/: CMakeLists.txt  UART_config.h  UART_interface.h  UART_private.h  UART_program.c
COTS/01-MCAL/04-NVIC/: NVIC_config.h  NVIC_interface.h  NVIC_private.h  NVIC_program.c
COTS/02- HAL/01- LCD/: LCD_config.h  LCD_interface.h  LCD_private.h  LCD_program.c
COTS/02- HAL/02- GPS/: GPS.c  GPS.h  GPS_interface.h  extract_coordinates.c  gps_receive_sentence  gps_receive_sentence.c
COTS/02- HAL/02- LED/: LED_config.h  LED_interface.h  LED_program.c
COTS/02- HAL/03-LED/: LED_interface.h  LED_private.h  LED_program.c
COTS/02-HAL/01-LCD/: CMakeLists.txt  LCD_config.h  LCD_interface.h  LCD_private.h  LCD_program.c
COTS/02-HAL/02-LED/: CMakeLists.txt  LED_config.h  LED_interface.h  LED_private.h  LED_program.c
COTS/02-HAL/03-GPS/: CMakeLists.txt  GPS_ERROR_STATE.h  GPS_interface.h  GPS_private.h  GPS_program.c
COTS/03-Service/: CMakeLists.txt
COTS/04- APP/: main.c  main.h
COTS/04-APP/: APP.c  APP.h  CMakeLists.txt  main.c  main.h
COTS/05- LIB/: ERROR_STATE.h
COTS/05-LIB/: BIT_MATH.h  CMakeLists.txt  STD_TYPES.h  tm4c123gh6pm.h
COTS/APP/: APP.c  APP.h  main.c
COTS/HAL/GPS/: GPS_config.h  GPS_interface.h  GPS_private.h  GPS_program.c
COTS/HAL/LCD/: CLCD_config.h  CLCD_interface.h  CLCD_private.h
COTS/HAL/LED/: LED_config.h  LED_private.h
COTS/HAL/SSD/: SSD_config.h  SSD_interface.h  SSD_private.h  SSD_program.c
COTS/LIB/: STD_TYPES.h
COTS/MCAL/GPIO/: GPIO_interface.h  GPIO_program.c
COTS/MCAL/NVIC/: NVIC_config.h  NVIC_private.h
COTS/MCAL/STK/: STK_config.h  STK_interface.h  STK_program.c
COTS/MCAL/UART/: UART_program.c
Draft/: UART0_interface.h  UART2.c
Draft/UART0/: UART0_program.c  UART_interface.h
Draft/UART5/: UART5.c  UART5.h
GPS_Distance_Tracking_System/: .ccsproject  .cproject
GPS_Distance_Tracking_System/.launches/: GPS_Distance_Tracking_System.launch
GPS_Distance_Tracking_System/APP/: APP.c  APP.h  main.c  main.h
GPS_Distance_Tracking_System/Debug/: GPS_Distance_Tracking_System.map  GPS_Distance_Tracking_System.out  GPS_Distance_Tracking_System_linkInfo.xml  ccsObjs.opt  makefile  sources.mk  subdir_rules.mk  subdir_vars.mk
Test Drivers/DIO_Test/: DIO_Test.uvguix.karim  DIO_Test.uvoptx  DIO_Test.uvprojx  DIO_config.h  DIO_private.h  DIO_program.c  STD_TYPES.h
Test Drivers/GPS_Test/: .ccsproject  .cproject  .project  DIO_config.h  DIO_interface.h  DIO_private.h  DIO_program.c  GPS_config.h  GPS_interface.h  GPS_private.h  GPS_program.c  LCD_config.h  LCD_interface.h  LCD_program.c  STK_config.h  STK_interface.h  STK_private.h  STK_program.c  Tiva_C_TM4C123GH6PM.ccxml  UART_config.h  UART_interface.h  UART_private.h  UART_program.c
Test Drivers/LCD_Test/: .ccsproject  .cproject  .project  LCD_config.h  LCD_interface.h  LCD_private.h  LCD_program.c  STD_TYPES.h  STK_private.h  main.c
Test Drivers/LED_Test/: .ccsproject  .cproject
Test Drivers/STK_Test/: DIO_config.h  DIO_program.c  STD_TYPES.h  STK_Test.uvguix.karim  STK_Test.uvoptx  STK_Test.uvprojx  (+2 more)
(+255 files in other folders)
