#cmake_minimum_required(VERSION 3.15)

# Set the name of the module
#set(MODULE_NAME lib)

# Specify the source files for this module
#set(SOURCES
#	STD_TYPES.h BIT_MATH.h tm4c123gh6pm.h
#)

# Create a library target for this module
#add_library(${MODULE_NAME} ${SOURCES})

# Add any necessary include directories here
#target_include_directories(${MODULE_NAME} PUBLIC .)
